--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -314,14 +314,22 @@
         <div class="title col-xs-12"><h1>PRE<span style='color:red'>Z</span>ERA</h1></div>
         <div class="simplePage">
           <h3>My presentations</h3>
-           <table class="table" style="max-width: 100%">
-             <%= video %>
-
+           <table class="table" style="max-width: 100%">           
       <% if (userData.domainSet == 0) { %>
   			<% slides.forEach(function(slide){ %>
   				<tr id="slide_<%= slide.sid %>">
   				<td width="150"><a href="/<% if(slide.scid != null) { %><%= slide.scid %><% } else { %><%= slide.sid %><% } %>/"><img src="/<%= slide.sid %>/img0.jpg" class="img-rounded" width="90%"></a></td>
-  				<td><a href="/<% if(slide.scid != null) { %><%= slide.scid %><% } else { %><%= slide.sid %><% } %>/"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb<br><a href="#" slideId="<%= slide.sid %>" class="deleteSlide">Delete presentation</a></td>
+  				<td><a href="/<% if(slide.scid != null) { %><%= slide.scid %><% } else { %><%= slide.sid %><% } %>/"><%= slide.title %></a>
+          <% if(slide.video.length) { %>
+            <br>Video:<br>
+            <% slide.video.forEach(function(video){ %>
+                <video width="240" height="120" controls>
+                  <source src="<%= video %>" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            <%  }); %>
+          <% } %>
+          <br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb<br><a href="#" slideId="<%= slide.sid %>" class="deleteSlide">Delete presentation</a></td>
   				</tr>
   			<%  }); %>
       <% } %>
