--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
 	<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
+
     <!-- Bootstrap Core CSS -->
     <link href="../../new_template/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -120,7 +121,8 @@
 
     <section id="slideLogin" class="login mainbackground allData">
         <div class="col-xs-12 remoteTitle">PRE<span style='color:red'>Z</span>ERA</div>
-
+<row>
+  <div class="col-xs-12">
         <h4 id="noticeForm" style="color: #FF0000; display:none"></h4>
 		<div class="loginbody">
         <form role="form" id="pres_login">
@@ -136,6 +138,8 @@
 					<center><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
 				</form>
       </div>
+  </div>
+</row>
     </section>
 
 
