added meeting beta

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -28,6 +28,7 @@
 		var isVideoChatOpen = "<%= isVideoChatOpen %>";
 		var isScreensharingOpen = "<%= isScreensharingOpen %>";
 		var currentHash = "<%= hash %>";
+		var meeting = "<%= meeting %>";
 		</script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery-2.1.3.min.js"></script>
