--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -267,7 +267,7 @@
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
 				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword">Protect With Password</a></li>
 				  <li><a href="javascript:getPresentationKey()" id="menuPresKey">Get presenter password</a></li>
-				  <li><a href="/#myPres" id="shareTwitter">My Presentations</a></li>
+				  <li><a href="/#myPres" id="menuMyPres">My Presentations</a></li>
 				  <li><a href="/">Home</a></li>
 				  <li><a href="javascript:showHideRenamePresentationOverlay()" id="menuRenamePresentation">Rename ($Payed)</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
