Added scalable broadcast

--- a/AWS_Website/www_static/video-e.html
+++ b/AWS_Website/www_static/video-e.html
@@ -89,7 +89,7 @@
 
             // by default, socket.io server is assumed to be deployed on your own URL
             connection.socketURL = '/';
-
+            connection.enableScalableBroadcast = true;
             // comment-out below line if you do not have your own socket.io server
             // connection.socketURL = 'https://rtcmulticonnection.herokuapp.com:443/';
 
