--- a/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
@@ -48,7 +48,7 @@
                     OfferToReceiveAudio: true,
                     OfferToReceiveVideo: true
                 };
-                connection.open(hash);
+                connection.open('video-' + hash);
           }
 
           connection.onstream = function(event) {
