--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -42,6 +42,10 @@
     <!-- slider stylesheets -->
     <link class="rs-file" href="/css/rs-default.css" rel="stylesheet">
     <link class="rs-file" href="/A1/css/A1.css" rel="stylesheet">
+		<% if(meeting == 1) { %>
+			<link class="rs-file" href="/A1/css/chalk.css" rel="stylesheet">
+		<% } %>
+		<link class="rs-file" href="/A1/css/A1.css" rel="stylesheet">
      <!-- font   -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- font awesome -->
