--- a/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
@@ -4,23 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <style>
-    video {
-    	display: block;
-        width: 100%;
-    }
-    #videoR {
-      width: 90%;
-    	position: static;
-      margin-bottom: 10px;
-      border: 1px solid #CCCCCC;
-    }
-    #videoL {
-      width: 90%;
-    	border: 1px solid #3F7FBF;
-      margin-bottom: 10px;
-    }
-    </style>
+    <link rel="stylesheet" href="/A1/css/webrtc.css">
 </head>
 
 <body onload="startRoom()">
@@ -29,6 +13,7 @@
 
         <script src="//cdn.webrtc-experiment.com:443/rmc3.min.js"></script>
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="/A1/js/webrtc/webrtc.js"></script>
 
         <!-- socket.io for signaling -->
         <script src="/socket.io/socket.io.js"></script>
@@ -54,10 +39,10 @@
           connection.onstream = function(event) {
               if(event.type == "local") {
                 connection.getSocket().emit("presenterVideoChat", {open: 1, hash: '<%= hash %>'});
-                $("#videoL").append(event.mediaElement);
+                webrtc.appendElement({connection: connection, element: event.mediaElement, append: "videoL", buttons: {audio: 1, video: 1}});
               }
               else {
-                $("#videoR").append(event.mediaElement);
+                webrtc.appendElement({connection: connection, element: event.mediaElement, append: "videoR"});
               }
           };
 </script>
