--- a/AWS_Website/www_static/A1/webrtc/video-client-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client-v2.html
@@ -26,14 +26,14 @@
             remoteDiv: "videoR",
             buttons: {
               local: {audio: 1, video: 1},
-              remote: {}
+              remote: {audio: 1}
             },
             webrtc: {
               socketURL: "/",
               enableScalableBroadcast: true,
               session: {
                 audio: true,
-                video: true
+                video: true,
               },
               sdpConstraints: {
                 mandatory : {
