--- a/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
@@ -34,7 +34,7 @@
               enableScalableBroadcast: true,
               session: {
                 audio: true,
-                video: true
+                video: true,
               },
               sdpConstraints: {
                 mandatory : {
