--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -235,7 +235,7 @@
 	<!-- <div id="videochatpanel"></div> -->
 	<div id="videochat">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
-		<iframe width="100%" height="100%" id="videoframe" scrolling="auto"></iframe>
+		<iframe width="100%" height="100%" id="videoframe" scrolling="auto" allowfullscreen="true"></iframe>
 	</div>
 
 	<div id="recording">
