--- a/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
@@ -27,7 +27,7 @@
             remoteDiv: "videoR",
             buttons: {
               local: {audio: 1, video: 1},
-              remote: {audio: 1}
+              remote: {audio: 1, fullscreen: 1}
             },
             webrtc: {
               socketURL: "/",
@@ -36,12 +36,30 @@
                 audio: true,
                 video: true,
               },
+              /*bandwidth: {
+                  audio: 128,
+                  video: 1024,
+                  screen: 1024
+              },*/
               sdpConstraints: {
                 mandatory : {
                   OfferToReceiveAudio: true,
                   OfferToReceiveVideo: true
                 }
-              }
+              }// Full HD
+              /*,
+              mediaConstraints: {
+                video: {
+                  mandatory: {
+                      maxWidth: 1920,
+                      maxHeight: 1080,
+                      minAspectRatio: 1.77,
+                      minFrameRate: 3,
+                      maxFrameRate: 64
+                  },
+                  optional: []
+                }
+              }*/
             }
           });
 </script>
