Added sharing buttons

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -310,6 +310,7 @@
     <script defer src="/js/LASER_RECEIVER.js"></script>
     <!-- remote imported-->
     <script src="/js/remote/slite.js"></script>
+		<script src="/A1/js/clipboard.min.js"></script>
 
     <!-- end VideoChat Javascript -->
 
@@ -336,6 +337,24 @@
 		}catch(e) {}
 	</script>
 	<div id="redDot"><img src="/img/redDot.png" alt="Laser Pointer"></div>
+
+
+	<div class="share-div">
+
+		<!-- AddToAny BEGIN -->
+		<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+		<!--a class="a2a_dd" href="https://www.addtoany.com/share"></a-->
+		<a class="copyButton" title="Copy url to clipboard" alt="dwadwa"><img src="/A1/img/copy-share.png" id="copyClipboardButton"></a>
+		<a class="a2a_button_google_gmail"></a>
+		<a class="a2a_button_facebook"></a>
+		<a class="a2a_button_twitter"></a>
+		<a class="a2a_button_yahoo_mail"></a>
+		<a class="a2a_button_linkedin"></a>
+		</div>
+		<script async src="https://static.addtoany.com/menu/page.js"></script>
+		<!-- AddToAny END -->
+
+	</div>
 
 	</div>
 	</body>
