--- a/AWS_Website/www_static/vd/video-pr.html
+++ b/AWS_Website/www_static/vd/video-pr.html
@@ -13,9 +13,9 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="//cdn.webrtc-experiment.com:443/rmc3.min.js"></script>
         <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
-        <script src="scalable.js"></script>
+        <script src="/vd/scalable.js"></script>
         <script>
-        var hash = "003zx";
+        var hash = "<%=hash%>";
         var webrtc = new webrtcScalable({
           roomId: hash,
           div: "video-preview",
