--- a/AWS_Website/www_static/vd/video-cl.html
+++ b/AWS_Website/www_static/vd/video-cl.html
@@ -9,14 +9,27 @@
 <body onload="webrtc.startWebrtcSession()">
         <div class="github-stargazers"></div>
         <h1></h1>
-        <video id="video-preview" controls loop></video>
+        <article>
+          <section class="experiment">
+            <div id="videos-container">
+              <video id="video-preview" controls loop></video>
+          </div>
+          </section>
+        </article>
         <script src="/socket.io/socket.io.js"></script>
         <script src="//cdn.webrtc-experiment.com:443/rmc3.min.js"></script>
         <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
-        <script src="/vd/scalable.js"></script>
+        <script src="/A1/js/webrtc/scalable.js"></script>
         <script>
         var hash = "<%=hash%>";
         var webrtc = new webrtcScalable({
+          webrtc: {
+            session: {
+                audio: true,
+                video: true,
+                oneway: true
+            }
+          },
           roomId: hash,
           div: "video-preview",
         });
