Added chat for test

--- a/AWS_Website/www_static/vd/video-cl.html
+++ b/AWS_Website/www_static/vd/video-cl.html
@@ -4,18 +4,19 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
+    <style>
+    video {
+      width: 320px;
+      height: 240px;
+    }
+    </style>
 </head>
 
-<body onload="webrtc.startWebrtcSession()">
+<body onload="webrtc.startWebrtcSession();startChat();">
         <div class="github-stargazers"></div>
         <h1></h1>
-        <article>
-          <section class="experiment">
-            <div id="videos-container">
-              <video id="video-preview" controls loop></video>
-          </div>
-          </section>
-        </article>
+        <video id="video-preview" controls loop></video>
+        <iframe width="320" height="300" src="" id="chat"></iframe>
         <script src="/socket.io/socket.io.js"></script>
         <script src="//cdn.webrtc-experiment.com:443/rmc3.min.js"></script>
         <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
@@ -33,6 +34,9 @@
           roomId: hash,
           div: "video-preview",
         });
+        function startChat() {
+          document.getElementById('chat').src = "/chat.html?presentation=" + hash;
+        }
         </script>
 </body>
 
