Added poster for no video

--- a/AWS_Website/www_static/vd/video-cl.html
+++ b/AWS_Website/www_static/vd/video-cl.html
@@ -15,7 +15,7 @@
 <body onload="webrtc.startWebrtcSession();startChat();">
         <div class="github-stargazers"></div>
         <h1></h1>
-        <video id="video-preview" controls loop></video>
+        <video id="video-preview" poster="/A1/img/webrtc/no-video.png" controls loop></video>
         <iframe width="320" height="300" src="" id="chat"></iframe>
         <script src="/socket.io/socket.io.js"></script>
         <script src="//cdn.webrtc-experiment.com:443/rmc3.min.js"></script>
