--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -41,11 +41,12 @@
     <link href="/css/github.css" rel="stylesheet">
     <!-- slider stylesheets -->
     <link class="rs-file" href="/css/rs-default.css" rel="stylesheet">
-    <link class="rs-file" href="/A1/css/A1.css" rel="stylesheet">
 		<% if(meeting == 1) { %>
+			<link class="rs-file" href="/A1/css/A1-meeting.css" rel="stylesheet">
 			<link class="rs-file" href="/A1/css/chalk.css" rel="stylesheet">
+		<% } else { %>
+			<link class="rs-file" href="/A1/css/A1.css" rel="stylesheet">
 		<% } %>
-		<link class="rs-file" href="/A1/css/A1.css" rel="stylesheet">
      <!-- font   -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- font awesome -->
