Fixes for webrtc v2 + facebook

--- a/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter-v2.html
@@ -30,7 +30,7 @@
               remote: {audio: 1, fullscreen: 1}
             },
             webrtc: {
-              socketURL: "/",
+              socketURL: "/signaling-server",
               enableScalableBroadcast: true,
               session: {
                 audio: true,
