--- a/AWS_Website/www_static/A1/webrtc/video-client-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client-v2.html
@@ -29,7 +29,7 @@
               remote: {audio: 1, fullscreen: 1}
             },
             webrtc: {
-              socketURL: "/",
+              socketURL: "/signaling-server",
               enableScalableBroadcast: true,
               session: {
                 audio: true,
